# independent-browser

./: Cargo.toml
.github/workflows/: android_build.yml  build.yml
independent_browser/app/src/main/: AndroidManifest.xml
independent_browser/app/src/main/java/com/custom/browser/: MainActivity.java
independent_browser/app/src/main/res/layout/: activity_main.xml
independent_browser/app/src/main/res/values/: strings.xml
src/: lib.rs  main.rs
