[package]
name = "browser_crypto_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "browser_core"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
rcgen = "0.11"
http = "0.2"
hyper-tls = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
native-tls = { version = "0.2", features = ["vendored"] }
bytes = "1.0"
dashmap = "5.0"
regex = "1.0"

